test/data/resolver/valid/call_yield_carry_forward.cypher
CALL test.labels() YIELD label
WITH label
RETURN label
